<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailUser"
    android:background="@color/graylight"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">
        <LinearLayout
            android:background="@drawable/backgroundgradient"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/set_avatar"
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@tools:sample/avatars"/>
            <TextView
                android:id="@+id/set_fullname"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repository"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/set_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/value"
                        android:textColor="#039BE5"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/set_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/primary"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/set_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/primary"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TableLayout
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        User name-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/person"/>
            <TextView
                android:id="@+id/set_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textSize="20sp" />
        </TableRow>

<!--        Location-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/location"/>
            <TextView
                android:id="@+id/set_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/location"
                android:textSize="20sp" />
        </TableRow>

<!--        Company-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/company"/>
            <TextView
                android:id="@+id/set_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/company"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:textColor="#fff"
        android:background="@drawable/buttonstyle"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit"/>

</LinearLayout>